--- a/lab1/Vagrantfile
+++ b/lab1/Vagrantfile
@@ -69,7 +69,7 @@ Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "2048"
     vb.cpus = 2
-    # vb.check_guest_additions = false
+    vb.check_guest_additions = false
     vb.customize ["modifyvm", :id, "--nested-hw-virt", "on"]
   end
 
