--- a/lab7/nginx.conf
+++ b/lab7/nginx.conf
@@ -4,9 +4,7 @@ events {
 
 http {
     upstream balance {
-        server 172.20.0.10:8080;
-        server 172.20.0.11:8080;
-        server 172.20.0.12:8080;
+        server web:8080;
     }
 
     server {
